fix css error, scroll to bottom on small screen

--- a/docs/styles/style.scss
+++ b/docs/styles/style.scss
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 @media screen and (min-width: 1024px) {
     #container {
         &.survey_open {
@@ -32,7 +36,8 @@
     margin: auto;
 }
 
-.survey {
+#survey {
+    width: 100%;
     iframe {
         width: 100%;
         height: 98vh;
